Fix extra spaces appearing in code blocks

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -219,7 +219,6 @@ hr {
   padding: var(--spacing-sm);
   max-width: 100%;
   overflow-x: auto;
-  white-space: break-spaces;
 
   border-radius: 20px;
   @media (max-width: $breakpoint-tablet) {
@@ -230,6 +229,11 @@ hr {
     background-color: #DDD !important;
     filter: invert(100%);
   }
+}
+
+.astro-code pre, pre.astro-code,
+.code-box pre, pre.code-box {
+  white-space: break-spaces;
 }
 
 .callout {
